--- a/projects/vs2017/gpucc/gpucc.vcxproj.filters
+++ b/projects/vs2017/gpucc/gpucc.vcxproj.filters
@@ -66,4 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\gpucc.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
