--- a/projects/vs2017/gpucc/gpucc.vcxproj.filters
+++ b/projects/vs2017/gpucc/gpucc.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="..\..\..\src\win32\fxccompilerapi_win32.cc">
       <Filter>Source Files\win32</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\win32\dxccompilerapi_win32.cc">
+      <Filter>Source Files\win32</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\gpucc.def">
