Add NVRTC loader.

--- a/projects/vs2017/gpucc/gpucc.vcxproj
+++ b/projects/vs2017/gpucc/gpucc.vcxproj
@@ -21,6 +21,7 @@
     <ClInclude Include="..\..\..\include\win32\dxccompilerapi_win32.h" />
     <ClInclude Include="..\..\..\include\win32\fxccompilerapi_win32.h" />
     <ClInclude Include="..\..\..\include\win32\gpucc_internal_win32.h" />
+    <ClInclude Include="..\..\..\include\win32\ptxcompilerapi_win32.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\gpucc.cc" />
@@ -28,6 +29,7 @@
     <ClCompile Include="..\..\..\src\win32\dxccompilerapi_win32.cc" />
     <ClCompile Include="..\..\..\src\win32\fxccompilerapi_win32.cc" />
     <ClCompile Include="..\..\..\src\win32\gpucc_internal_win32.cc" />
+    <ClCompile Include="..\..\..\src\win32\ptxcompilerapi_win32.cc" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\gpucc.def" />
