--- a/projects/vs2017/gpucc/gpucc.vcxproj.filters
+++ b/projects/vs2017/gpucc/gpucc.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="..\..\..\include\win32\fxccompilerapi_win32.h">
       <Filter>Header Files\win32</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\win32\ptxcompilerapi_win32.h">
+      <Filter>Header Files\win32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\win32\dllmain.cc">
@@ -69,6 +72,9 @@
       <Filter>Source Files\win32</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\win32\dxccompilerapi_win32.cc">
+      <Filter>Source Files\win32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\win32\ptxcompilerapi_win32.cc">
       <Filter>Source Files\win32</Filter>
     </ClCompile>
   </ItemGroup>
