--- a/projects/vs2017/gpucc/gpucc.vcxproj
+++ b/projects/vs2017/gpucc/gpucc.vcxproj
@@ -20,6 +20,7 @@
     <ClInclude Include="..\..\..\include\shaderc\visibility.h" />
     <ClInclude Include="..\..\..\include\win32\dxccompilerapi_win32.h" />
     <ClInclude Include="..\..\..\include\win32\fxccompilerapi_win32.h" />
+    <ClInclude Include="..\..\..\include\win32\gpucc_compiler_dxc_win32.h" />
     <ClInclude Include="..\..\..\include\win32\gpucc_compiler_fxc_win32.h" />
     <ClInclude Include="..\..\..\include\win32\gpucc_internal_win32.h" />
     <ClInclude Include="..\..\..\include\win32\ptxcompilerapi_win32.h" />
@@ -29,6 +30,7 @@
     <ClCompile Include="..\..\..\src\win32\dllmain.cc" />
     <ClCompile Include="..\..\..\src\win32\dxccompilerapi_win32.cc" />
     <ClCompile Include="..\..\..\src\win32\fxccompilerapi_win32.cc" />
+    <ClCompile Include="..\..\..\src\win32\gpucc_compiler_dxc_win32.cc" />
     <ClCompile Include="..\..\..\src\win32\gpucc_compiler_fxc_win32.cc" />
     <ClCompile Include="..\..\..\src\win32\gpucc_internal_win32.cc" />
     <ClCompile Include="..\..\..\src\win32\gpucc_platform_win32.cc" />
