--- a/projects/vs2017/gpucc/gpucc.vcxproj.filters
+++ b/projects/vs2017/gpucc/gpucc.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="..\..\..\include\win32\gpucc_compiler_fxc_win32.h">
       <Filter>Header Files\win32</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\win32\gpucc_compiler_dxc_win32.h">
+      <Filter>Header Files\win32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\win32\dllmain.cc">
@@ -84,6 +87,9 @@
       <Filter>Source Files\win32</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\win32\gpucc_platform_win32.cc">
+      <Filter>Source Files\win32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\win32\gpucc_compiler_dxc_win32.cc">
       <Filter>Source Files\win32</Filter>
     </ClCompile>
   </ItemGroup>
